# wheel

./: .gitignore  README.md  justfile
agents/: codex53_prompt_modelarska_aplikacja.md  modelarska_aplikacja_spec.md  modelarska_aplikacja_spec_rozszerzona.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: __init__.py  contracts.py  errors.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/schemas/: __init__.py  color.py  common.py  errors.py  history.py  paint.py  palette.py  workflow.py
backend/tests/: test_contracts_openapi.py  test_contracts_schema.py  test_health.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json
frontend/src/: App.vue  main.ts  style.css
thoughts/: README.md
thoughts/plans/: debt_model_paint_api_contracts_validation_implementation_plan.md  debt_model_paint_mvp_scaffold_foundation_implementation_plan.md
thoughts/reviews/: debt_model_paint_api_contracts_validation_implementation_plan-review.md  debt_model_paint_mvp_scaffold_foundation_implementation_plan-review.md
thoughts/tickets/: debt_model_paint_api_contracts_validation.md  debt_model_paint_business_scope_docs.md  debt_model_paint_developer_guide.md  debt_model_paint_mvp_scaffold_foundation.md  debt_model_paint_technical_architecture_docs.md  debt_model_paint_user_guide.md  feature_model_paint_catalog_import_export.md  feature_model_paint_color_conversion_layer.md  feature_model_paint_data_models_migrations_seed.md  (+9 more)
(+6 files in other folders)
