[project]
name = "model-paint-backend"
version = "0.1.0"
description = "Backend scaffold for model paint MVP"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.111.0",
  "loguru>=0.7.2",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
